[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "site-health-checker"
version = "0.2"
description = ""
dependencies = [
    "requests>=2.33.0",
    "beautifulsoup4>=4.14.0"
]
requires-python = ">=3.9"

[project.scripts]
shcheck = "crawler:main"